<resources>

    <!--Spinner items.-->
    <string name="unit_year">년도</string>
    <string name="unit_sid">학번</string>
    <string name="additional_sid">전체 학번</string>


    <string-array name="array_type">
        <item>전액납부</item>
        <item>1학기만</item>
        <item>2학기만</item>
        <item>3학기만</item>
        <item>4학기만</item>
        <item>5학기만</item>
        <item>6학기만</item>
        <item>7학기만</item>
    </string-array>

    <string-array name="array_amount">
        <item>8만원</item>
        <item>7만원</item>
        <item>6만원</item>
        <item>5만원</item>
        <item>4만원</item>
        <item>3만원</item>
        <item>2만원</item>
        <item>1만원</item>
    </string-array>

    <!--Title of activities or app.-->
    <string name="app_name">컴소 학생회</string>

    <!--Title of pages.-->
    <string name="title_search">납부자 검색</string>
    <string name="title_result">검색결과</string>
    <string name="title_search_button">검색</string>
    <string name="title_menu_check">납부 확인</string>
    <string name="title_searching_only">납부자 연속 검색</string>

    <string name="title_enroll">학생회비 납부자 신규 등록</string>
    <string name="title_enroll_subtitle">납부자 신규 등록</string>
    <string name="title_enroll_newbie">신입생 다중 등록</string>
    <string name="title_menu_enroll">신규 등록</string>
    <string name="title_enroll_newbie_title">현재 등록되는 학우 정보</string>
    <string name="title_enroll_newbie_type">전액 납부(8만원)</string>
    <string name="title_enroll_newbie_name">신입생 명단</string>

    <string name="title_menu_manage">전체 관리</string>
    <string name="title_manage">납부자 전체 명단 관리</string>

    <string name="title_developers_info">개발자 정보</string>
    <string name="title_modify">학우 정보 수정</string>

    <string name="title_menu_etc">기타</string>
    <string name="title_menu_logout">로그아웃</string>
    <string name="title_caution">주의사항</string>
    <string name="title_support">지원대상</string>


    <string name="title_search_name">검색할 학우의 이름을 입력하세요.</string>
    <string name="title_detail_student_delete_check">정말 삭제하시겠습니까</string>
    <string name="title_detail_student_modify_check">수정하시겠습니까</string>
    <string name="title_enroll_check">등록하시겠습니까?</string>
    <string name="title_authorization">관리자 암호를 입력해주세요</string>


    <!--Name of buttons.-->
    <string name="button_cancel">취소</string>
    <string name="button_modify">수정</string>
    <string name="button_ok">확인</string>
    <string name="button_enroll">등록</string>
    <string name="button_delete">삭제</string>
    <string name="button_refresh">새로고침</string>


    <!--Prompt contents of many input text blanks.-->
    <string name="prompt_name">이름</string>
    <string name="prompt_sid">학번</string>
    <string name="prompt_year">납부년도</string>
    <string name="prompt_type">납부유형</string>
    <string name="prompt_question_title">제목</string>
    <string name="prompt_question_content">내용</string>
    <string name="prompt_amount">납부금액</string>
    <string name="prompt_auto_login">자동 로그인</string>
    <string name="prompt_auto_id_fill">아이디 저장</string>

    <string name="prompt_enroll_newbie">엔터로 학생을 구분하세요.</string>

    <string name="prompt_search_name">이름을 입력하세요</string>

    <string name="prompt_authorization">
        개인정보 보호를 위해\n
        관리자 암호 4자리를 입력해주세요
    </string>


    <!--Caution-->
    <string name="caution_exit_back_button">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="caution_no_student">찾는 대상이 납부자 명단에 없습니다.</string>

    <string name="caution_db_load_fail">데이터베이스 로딩에 실패했습니다.</string>
    <string name="caution_db_on_load">데이터베이스를 로딩 중입니다.</string>

    <string name="caution_enroll_already">이미 등록된 학우가 있습니다.</string>
    <string name="caution_enroll_success">등록되었습니다.</string>
    <string name="caution_enroll_fail">등록에 실패했습니다.</string>

    <string name="caution_delete_success">삭제되었습니다.</string>
    <string name="caution_delete_fail">삭제에 실패했습니다.</string>

    <string name="caution_modify_success">수정했습니다.</string>
    <string name="caution_modify_fail">수정에 실패했습니다.</string>

    <string name="caution_login_success">로그인 성공</string>
    <string name="caution_login_fail">로그인 실패</string>

    <string name="caution_authorize_success">인증에 성공하였습니다.</string>

    <!--TODO: 수정-->
    <string name="caution_enroll_newbie_no_save">
        지금 나가시면 작성 중인 내용은 사라집니다.
        \'뒤로\' 버튼을 한번 더 누르시면 현재 창을 닫습니다.</string>

    <!--ETC...-->
    <string name="code">1004</string>

    <string name="name_account">컴퓨터소프트웨어학부 학생회</string>
    <string name="subname_account">hyucsedb@gmail.com</string>

    <string name="content_description_developers_title">한양대학교 컴퓨터소프트웨어학부 로고</string>
    <string name="content_description_facebook_logo">페이스북 로고</string>
    <string name="content_description_find_student">돋보기</string>
    <string name="content_description_question">누르면 주의사항 혹은 사용법에 관한 팝업창이 뜹니다.</string>
    <string name="content_description_close">닫기</string>

    <string name="tip_modify_student">수정할 내용을 클릭하세요.</string>
    <string name="tip_searching_only">
        전체 학번을 대상으로 검색합니다.
        \n아래에 검색할 학우의 이름을 입력해주세요.</string>


    <!-- About login page.-->
    <string name="error_invalid_email">아이디를 확인해주세요</string>
    <string name="error_invalid_password">비밀번호를 확인해주세요</string>
    <string name="error_incorrect_password">비밀번호를 확인해주세요</string>
    <string name="error_field_required">빈칸을 채워주세요</string>

    <string name="blank_id">아이디를 입력하세요</string>
    <string name="blank_password">비밀번호를 입력하세요</string>
    <string name="login_name">로그인</string>

    <string name="login_bottom_message">
        [개발자 정보]\n컴퓨터소프트웨어학부 제 9대 학생회 [화합]
        \n김선웅, 류지범</string>


    <!--About developer information page.-->
    <string name="title_about_developers">개발자 정보</string>
    <string name="about_developers_department">한양대학교 컴퓨터소프트웨어학부</string>
    <string name="about_developers_developer1">17학번 김선웅 sunung007@naver.com</string>
    <string name="about_developers_developer2">17학번 류지범 dyeon11@gmail.com</string>

    <string name="title_about_version">버전 정보</string>
    <string name="about_version">[최종 수정일] 2019년 3월 6일</string>
    <string name="title_developers_email">건의사항 보내기</string>


    <!--Navigator-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Attention-->
    <string name="attention_search">
        🔔 16학번 이상의 학우
        \n전체 학번으로 검색하여 \"미납자\"인지만 확인해주세요.
        \n🔔 지원 대상이 아닙니다
        \n일부 학기에 해당하는 학생회비만 납부하였고, 납부에 해당한 학기가 지났음을 의미합니다.
    </string>

    <string name="attention_search_searching_only">
        🔔 납부자 연속 검색
        \n접속 당시의 데이터베이스를 기준으로 검색을 합니다.
        따라서 속도가 빠르지만, 도중 추가/변경 사항이 있어도 그를 반영하지 못합니다.
        \n🔔 사용방법
        \n야식사업 등 학생회비 납부 여부를 "연속"으로 확인해야할 때 사용할 것을 추천합니다.
    </string>

    <string name="attention_enroll">
        🔔 학생회비
        \n학생회비는 한 학기에 1만원 기준입니다.
        \n🔔 납부유형
        \n남은 학기 전액을 납부하였을 경우에는 전액납부를, 그렇지 않은 경우에는 납부한 학기를 입력하세요.
        \n(예: 3만원 납부 = [납부유형] 3학기만)
    </string>

    <!--TODO:바꿔야해-->
    <string name="attention_enroll_newbie">
        🔔 신입생 다중 등록
        \n학생회비를 \"전액납부\"한 현재 년도의 신입생 등록합니다.
        동명이인 체크를 하지 않으며, 전액납부한 신입생들만 등록 가능합니다.
        \n🔔 사용방법
        \n학기 초 등록할 신입생들이 많을 때 사용할 것을 추천합니다.
    </string>

</resources>
