<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_menu_check"
            android:title="@string/title_menu_check"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_enroll"
            android:icon="@drawable/ic_menu_enroll"
            android:title="@string/title_menu_enroll" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_menu_manage" />
    </group>

    <item android:title="@string/title_menu_etc">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/developer"
                    android:icon="@drawable/ic_menu_developer"
                    android:title="@string/title_about_developers" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/title_menu_logout" />
            </group>
        </menu>
    </item>

</menu>
