<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:id="@+id/view4"
        android:layout_width="274dp"
        android:layout_height="1dp"
        android:background="@drawable/gradiant" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/text_list_search_only_result_sid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/prompt_sid"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_list_search_only_result_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:weightSum="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_list_search_only_result_year"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/prompt_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_list_search_only_result_type"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_list_search_only_result_amount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_support"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_list_search_only_result_support"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

</LinearLayout>
