<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Enroll.EnrollNewbieActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_enroll_newbie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:titleTextAppearance="@style/TitleBarTextAppearance"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/title_enroll_newbie_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/prompt_sid"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_enroll_newbie_sid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/text_enroll_newbie_sid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/unit_sid"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/prompt_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_enroll_newbie_sid"
            app:layout_constraintEnd_toStartOf="@+id/text_enroll_newbie_year"
            app:layout_constraintStart_toEndOf="@+id/text_enroll_newbie_sid"
            app:layout_constraintTop_toTopOf="@+id/text_enroll_newbie_sid" />

        <TextView
            android:id="@+id/text_enroll_newbie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/unit_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/prompt_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_enroll_newbie_year"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/text_enroll_newbie_year"
            app:layout_constraintTop_toTopOf="@+id/text_enroll_newbie_year" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="32dp"
            android:text="@string/title_enroll_newbie_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/title_enroll_newbie_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/prompt_enroll_newbie"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_enroll_newbie_enroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <EditText
                android:id="@+id/edit_enroll_newbie_students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="111dp" />
        </ScrollView>

        <Button
            android:id="@+id/button_enroll_newbie_enroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button"
            android:text="@string/button_enroll"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_enroll_newbie"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>