<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/round_popup"
    android:padding="5dp"
    tools:context=".AuthorizationPopup">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:gravity="center_horizontal"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/title_authorization"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/prompt_authorization"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <EditText
        android:id="@+id/authorization_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="6"
        android:gravity="center_horizontal"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:letterSpacing="0.5"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/button_authorization_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_button"
        android:text="@string/button_ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/button_authorization_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_password" />

    <Button
        android:id="@+id/button_authorization_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/button_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/button_authorization_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_authorization_ok"
        app:layout_constraintTop_toTopOf="@+id/button_authorization_ok" />

</android.support.constraint.ConstraintLayout>